--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/components/node_modules
+/jsx/node_modules
+/lifecycle/node_modules
+/renderization/node_modules
 /.pnp
 .pnp.js
 
